Добавлен класс Author, обновлен класс book, создать dbcontext, выполненымиграции

--- a/4Module/appsettings.json
+++ b/4Module/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MySettings": {
+    "ApplicationName": "Book API",
+    "MaxBooksPerPage": 25,
+    "ApiSettings": {
+      "TomeoutInSeconds": 30,
+      "RetryCount": 5
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "UserID=postgres;Host=localhost;Port=5432;Database=bookdb;Username=postgres;Password="
+  }
 }
