--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,15 @@ services:
   book-api:
     build:
       context: .
-      dockerfile: 4module/Dockerfile    
+      dockerfile: 4Module/Dockerfile  
     ports:
-      - "5000:80"
+      - "5000:8080"
     environment:
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=bookdb;Username=postgres;Password=postgrespw
+      - DOTNET_CLI_TELEMETRY_OPTOUT=1
+      - LANG=C.UTF-8
+      - LC_ALL=C.UTF-8
     depends_on:
       - postgres
 
