Добавлены связи многие ко многим, настроены сервисы и контроллеры, выполнена миграция

--- a/4Module/appsettings.json
+++ b/4Module/appsettings.json
@@ -16,6 +16,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "UserID=postgres;Host=localhost;Port=5432;Database=bookdb;Username=postgres;Password="
+    "DefaultConnection": "UserID=postgres;Host=localhost;Port=5432;Database=bookdb;Username=postgres;Password=123"
   }
 }
