--- a/4Module/appsettings.json
+++ b/4Module/appsettings.json
@@ -16,6 +16,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "UserID=postgres;Host=localhost;Port=5432;Database=bookdb;Username=postgres;Password=123"
+    "DefaultConnection": "UserID=postgres;Host=localhost;Port=5433;Database=bookdb;Username=postgres;Password=postgrespw"
   }
 }
