--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,16 @@
-services:
-  book-api:
-    build:
-      context: .
-      dockerfile: 4Module/Dockerfile  
-    ports:
-      - "5000:8080"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=bookdb;Username=postgres;Password=postgrespw
-      - DOTNET_CLI_TELEMETRY_OPTOUT=1
-      - LANG=C.UTF-8
-      - LC_ALL=C.UTF-8
-    depends_on:
-      - postgres
 
+services:
   postgres:
     image: postgres:15
     environment:
       POSTGRES_DB: bookdb
       POSTGRES_PASSWORD: postgrespw
+      POSTGRES_USER: postgres  
     ports:
-      - "5432:5432"
+      - "5433:5432"  
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped  
 
 volumes:
   postgres_data:
