--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,18 @@ services:
     restart: unless-stopped
     command: redis-server --appendonly yes
 
+  mongodb:
+    image: mongo:7.0
+
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    restart: unless-stopped
+
+
 volumes:
   postgres_data:
   redis_data:
+  mongodb_data:
