--- a/4Module/appsettings.json
+++ b/4Module/appsettings.json
@@ -17,5 +17,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "UserID=postgres;Host=localhost;Port=5433;Database=bookdb;Username=postgres;Password=postgrespw"
-  }
+  },
+    "JwtSettings": {
+      "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
+      "Issuer": "your-app-name",
+      "Audience": "your-app-users",
+      "ExpirationMinutes": 60
+    }
 }
