--- a/IntegrationsTest/IntegrationsTest.csproj
+++ b/IntegrationsTest/IntegrationsTest.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.20" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.20" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\4Module\4Module.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
