--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Grpc.Tools" Version="2.76.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +28,11 @@
   </ItemGroup>
 
   <ItemGroup>
+   <Protobuf Include="..\GrpcBooksService\Protos\book.proto" GrpcServices="Client" />
+  <Protobuf Include="..\GrpcAuthorsService\Protos\author.proto" GrpcServices="Client" />
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\GrpcAuthorsService\GrpcAuthorsService.csproj" />
+    <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
