TASK-383: Была отправлена команда в шину и получен код 202 при тестировании

--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -35,6 +35,7 @@
     <ProjectReference Include="..\GrpcAuthorsService\GrpcAuthorsService.csproj" />
     <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\OrderContracts\OrderContracts.csproj" />
   </ItemGroup>
 
 </Project>
