TASK-383: Создан SubmitOrderConsumer : IConsumer<SubmitOrderCommand>,  MassTransit создает очередь submit-order-command

--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -36,6 +36,7 @@
     <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\OrderContracts\OrderContracts.csproj" />
+    <ProjectReference Include="..\OrderWorkerService)\OrderWorkerService.csproj" />
   </ItemGroup>
 
 </Project>
