--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
    <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -36,7 +36,8 @@
     <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\OrderContracts\OrderContracts.csproj" />
-    <ProjectReference Include="..\OrderWorkerService)\OrderWorkerService.csproj" />
+    <ProjectReference Include="..\OrderWorkerService\OrderWorkerService.csproj" />
+   
   </ItemGroup>
 
 </Project>
