TASK-385: IHostedService создан, consumer подписывается на топик

--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
    <Protobuf Include="..\GrpcBooksService\Protos\book.proto" GrpcServices="Client" />
   <Protobuf Include="..\GrpcAuthorsService\Protos\author.proto" GrpcServices="Client" />
+  <ProjectReference Include="..\AnalyticsWorker\AnalyticsWorker.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\GrpcAuthorsService\GrpcAuthorsService.csproj" />
     <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
