--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -9,6 +9,8 @@
     <RootNamespace>_4Module</RootNamespace>
     <UserSecretsId>124ba50e-c46a-443f-8814-8f72fa6fa4b8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	 <PublishSingleFile>false</PublishSingleFile>
+  <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,18 +31,13 @@
   </ItemGroup>
 
   <ItemGroup>
-   <Protobuf Include="..\GrpcBooksService\Protos\book.proto" GrpcServices="Client" />
-  <Protobuf Include="..\GrpcAuthorsService\Protos\author.proto" GrpcServices="Client" />
-  <ProjectReference Include="..\AnalyticsWorker\AnalyticsWorker.csproj" />
-    <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\GrpcAuthorsService\GrpcAuthorsService.csproj" />
-    <ProjectReference Include="..\GrpcBooksService\GrpcBooksService.csproj" />
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\InventoryService\InventoryService.csproj" />
-    <ProjectReference Include="..\NotificationService\NotificationService.csproj" />
-    <ProjectReference Include="..\OrderContracts\OrderContracts.csproj" />
-    <ProjectReference Include="..\OrderWorkerService\OrderWorkerService.csproj" />
-   
-  </ItemGroup>
+   <ProjectReference Include="..\AnalyticsWorker\AnalyticsWorker.csproj" />
+   <ProjectReference Include="..\Application\Application.csproj" />
+  <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  <ProjectReference Include="..\InventoryService\InventoryService.csproj" />
+  <ProjectReference Include="..\NotificationService\NotificationService.csproj" />
+  <ProjectReference Include="..\OrderContracts\OrderContracts.csproj" />
+  <ProjectReference Include="..\OrderWorkerService\OrderWorkerService.csproj" />
+</ItemGroup>
 
 </Project>
