--- a/4Module/Dockerfile
+++ b/4Module/Dockerfile
@@ -1,30 +1,26 @@
-# См. статью по ссылке https://aka.ms/customizecontainer, чтобы узнать как настроить контейнер отладки и как Visual Studio использует этот Dockerfile для создания образов для ускорения отладки.
-
-# Этот этап используется при запуске из VS в быстром режиме (по умолчанию для конфигурации отладки)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-
-# Этот этап используется для сборки проекта службы
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+
 COPY ["4Module/4Module.csproj", "4Module/"]
-RUN dotnet restore "./4Module/4Module.csproj"
+COPY ["Application/Application.csproj", "Application/"]
+COPY ["Domain/Domain.csproj", "Domain/"]
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+COPY ["AnalyticsWorker/AnalyticsWorker.csproj", "AnalyticsWorker/"]
+COPY ["InventoryService/InventoryService.csproj", "InventoryService/"]
+COPY ["NotificationService/NotificationService.csproj", "NotificationService/"]
+COPY ["OrderContracts/OrderContracts.csproj", "OrderContracts/"]
+COPY ["OrderWorkerService/OrderWorkerService.csproj", "OrderWorkerService/"]
+
+RUN dotnet restore "4Module/4Module.csproj"
+
+
 COPY . .
-WORKDIR "/src/4Module"
-RUN dotnet build "./4Module.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Этот этап используется для публикации проекта службы, который будет скопирован на последний этап
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./4Module.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+WORKDIR /src/4Module
+RUN dotnet publish "4Module.csproj" -c Release -o /app/publish --no-restore
 
-# Этот этап используется в рабочей среде или при запуске из VS в обычном режиме (по умолчанию, когда конфигурация отладки не используется)
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "4Module.dll"]
