--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,39 @@
 
 services:
+  book-service:
+    build:
+      context: .
+      dockerfile: 4Module/Dockerfile
+    ports:
+      - "7134:8080"
+    depends_on:
+      postgres:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=postgres;Database=bookdb;Username=postgres;Password=postgrespw
+      - RabbitMQ__Host=rabbitmq
+      - RabbitMQ__Username=admin
+      - RabbitMQ__Password=admin
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+      - ConnectionStrings__Redis=redis:6379
+      - ConnectionStrings__MongoDB=mongodb://mongodb:27017
+      - Kafka__BootstrapServers=kafka:29092
+
+
+  gateway-service:
+    build:
+      context: .
+      dockerfile: OcelotGateway/Dockerfile
+    ports:
+      - "5002:8080"
+    depends_on:
+      - book-service
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
@@ -19,7 +53,7 @@ services:
       - "9092:9092"
       - "29092:29092" 
     healthcheck:
-      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "kafka:29092", "--list"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -30,7 +64,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     hostname: kafka-ui
@@ -66,6 +100,11 @@ services:
       RABBITMQ_DEFAULT_PASS: admin
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq/mnesia
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
 
