TASK-387: Добавлена маршрутизация в Ocelot

--- a/OcelotGateway/appsettings.json
+++ b/OcelotGateway/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
+    "Issuer": "your-app-name",
+    "Audience": "your-app-users"
+  }
 }
