--- a/4Module/Dockerfile
+++ b/4Module/Dockerfile
@@ -1,7 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-
 COPY ["4Module/4Module.csproj", "4Module/"]
 COPY ["Application/Application.csproj", "Application/"]
 COPY ["Domain/Domain.csproj", "Domain/"]
@@ -14,8 +13,17 @@ COPY ["OrderWorkerService/OrderWorkerService.csproj", "OrderWorkerService/"]
 
 RUN dotnet restore "4Module/4Module.csproj"
 
-
-COPY . .
+COPY ["4Module/", "4Module/"]
+COPY ["Application/", "Application/"]
+COPY ["Domain/", "Domain/"]
+COPY ["Infrastructure/", "Infrastructure/"]
+COPY ["AnalyticsWorker/", "AnalyticsWorker/"]
+COPY ["InventoryService/", "InventoryService/"]
+COPY ["NotificationService/", "NotificationService/"]
+COPY ["OrderContracts/", "OrderContracts/"]
+COPY ["OrderWorkerService/", "OrderWorkerService/"]
+COPY ["GrpcBooksService/Protos/", "GrpcBooksService/Protos/"]
+COPY ["GrpcAuthorsService/Protos/", "GrpcAuthorsService/Protos/"]
 
 WORKDIR /src/4Module
 RUN dotnet publish "4Module.csproj" -c Release -o /app/publish --no-restore
