--- a/4Module/appsettings.Development.json
+++ b/4Module/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=bookdb;Username=postgres;Password=postgrespw",
+    "Redis": "localhost:6379",
+    "MongoDB": "mongodb://localhost:27017"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "admin",
+    "Password": "admin"
+  },
+  "KAFKA_BOOTSTRAP_SERVERS": "localhost:9092",
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
   }
 }
