--- a/4Module/appsettings.json
+++ b/4Module/appsettings.json
@@ -15,13 +15,17 @@
       "RetryCount": 5
     }
   },
+  "GrpcServices": {
+    "BookService": "http://localhost:7001",
+    "AuthorService": "http://localhost:7002"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "UserID=postgres;Host=localhost;Port=5433;Database=bookdb;Username=postgres;Password=postgrespw"
   },
-    "JwtSettings": {
-      "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
-      "Issuer": "your-app-name",
-      "Audience": "your-app-users",
-      "ExpirationMinutes": 60
-    }
+  "JwtSettings": {
+    "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
+    "Issuer": "your-app-name",
+    "Audience": "your-app-users",
+    "ExpirationMinutes": 60
+  }
 }
