TASK-387: Вместо ocelot используется YARD

--- a/OcelotGateway/appsettings.json
+++ b/OcelotGateway/appsettings.json
@@ -10,5 +10,51 @@
     "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
     "Issuer": "your-app-name",
     "Audience": "your-app-users"
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "swagger-route": {
+        "ClusterId": "book-service",
+        "Match": {
+          "Path": "/swagger/{**catch-all}"
+        }
+      },
+      "auth-route": {
+        "ClusterId": "book-service",
+        "Match": {
+          "Path": "/api/Auth/{**catch-all}"
+        }
+      },
+      "book-route": {
+        "ClusterId": "book-service",
+        "Match": {
+          "Path": "/api/Book/{**catch-all}"
+        },
+        "AuthorizationPolicy": "default"
+      },
+      "book-delete-route": {
+        "ClusterId": "book-service",
+        "Match": {
+          "Path": "/api/Book/{**catch-all}",
+          "Methods": [ "DELETE" ]
+        },
+        "AuthorizationPolicy": "AdminOnly"
+      },
+      "grpc-route": {
+        "ClusterId": "book-service",
+        "Match": {
+          "Path": "/api/Grpc/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "book-service": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://book-service:8080/"
+          }
+        }
+      }
+    }
   }
 }
