TASK-387: Изменены названия для соответсвия используемого API Gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
   gateway-service:
     build:
       context: .
-      dockerfile: OcelotGateway/Dockerfile
+      dockerfile: Gateway/Dockerfile
     ports:
       - "8080:8080"
     depends_on:
