TASK-389: Сервисы (Gateway, BookService) отправляют трейсы в Zipkin

--- a/Gateway/Dockerfile
+++ b/Gateway/Dockerfile
@@ -12,19 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["OcelotGateway/OcelotGateway.csproj", "OcelotGateway/"]
-RUN dotnet restore "./OcelotGateway/OcelotGateway.csproj"
+COPY ["Gateway/Gateway.csproj", "Gateway/"]
+RUN dotnet restore "./Gateway/Gateway.csproj"
 COPY . .
-WORKDIR "/src/OcelotGateway"
-RUN dotnet build "./OcelotGateway.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Gateway"
+RUN dotnet build "./Gateway.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Этот этап используется для публикации проекта службы, который будет скопирован на последний этап
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./OcelotGateway.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Gateway.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # Этот этап используется в рабочей среде или при запуске из VS в обычном режиме (по умолчанию, когда конфигурация отладки не используется)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "OcelotGateway.dll"]
+ENTRYPOINT ["dotnet", "Gateway.dll"]
