--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -25,12 +25,13 @@
           "Path": "/api/Auth/{**catch-all}"
         }
       },
-      "book-route": {
+      "book-get-route": {
         "ClusterId": "book-service",
         "Match": {
-          "Path": "/api/Book/{**catch-all}"
+          "Path": "/api/Book/{**catch-all}",
+          "Methods": [ "GET", "POST", "PUT" ]
         },
-        "AuthorizationPolicy": "default"
+        "AuthorizationPolicy": "Bearer"
       },
       "book-delete-route": {
         "ClusterId": "book-service",
