--- a/4Module/4Module.csproj
+++ b/4Module/4Module.csproj
@@ -14,7 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka.Extensions.OpenTelemetry" Version="0.4.0" />
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Elyspio.Utils.Telemetry.MassTransit" Version="1.0.0" />
     <PackageReference Include="Google.Protobuf" Version="3.28.3" />
     <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
     <PackageReference Include="Grpc.Tools" Version="2.71.0">
