--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -194,6 +194,7 @@ services:
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017
+      - ZIPKIN_ENDPOINT=http://zipkin:9411/api/v2/spans
 
 volumes:
   postgres_data:
