--- a/AnalyticsWorker/AnalyticsWorker.csproj
+++ b/AnalyticsWorker/AnalyticsWorker.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.13.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.13.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
