--- a/GrpcBooksService/GrpcBooksService.csproj
+++ b/GrpcBooksService/GrpcBooksService.csproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.57.0" />
+    <PackageReference Include="Polly.Extensions" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
