--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   book-service:
     build:
@@ -17,6 +16,8 @@ services:
         condition: service_started
       zipkin:
         condition: service_started
+      loki:
+        condition: service_started
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=bookdb;Username=postgres;Password=postgrespw
@@ -29,6 +30,7 @@ services:
       - Kafka__BootstrapServers=kafka:29092
       - GrpcServices__BookService=http://grpc-book-service:8080
       - GrpcServices__AuthorService=http://grpc-author-service:8080
+      - Loki__Url=http://loki:3100
 
   grpc-book-service:
     build:
@@ -39,6 +41,8 @@ services:
     depends_on:
       postgres:
         condition: service_started
+      loki:
+        condition: service_started
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=bookdb;Username=postgres;Password=postgrespw
@@ -46,6 +50,7 @@ services:
       - ASPNETCORE_HTTPS_PORT=
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - Kafka__BootstrapServers=kafka:29092
+      - Loki__Url=http://loki:3100
     restart: unless-stopped
 
   grpc-author-service:
@@ -57,6 +62,8 @@ services:
     depends_on:
       postgres:
         condition: service_started
+      loki:
+        condition: service_started
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=bookdb;Username=postgres;Password=postgrespw
@@ -64,6 +71,7 @@ services:
       - ASPNETCORE_HTTPS_PORT=
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - Kafka__BootstrapServers=kafka:29092
+      - Loki__Url=http://loki:3100
     restart: unless-stopped
 
   zipkin:
@@ -71,7 +79,6 @@ services:
     ports:
       - "9411:9411"     
     restart: unless-stopped
-
 
   gateway-service:
     build:
@@ -81,10 +88,11 @@ services:
       - "8080:8080"
     depends_on:
       - zipkin
-      - book-service       
+      - book-service
+      - loki
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-
+      - Loki__Url=http://loki:3100
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
@@ -116,6 +124,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     hostname: kafka-ui
@@ -127,7 +136,6 @@ services:
       KAFKA_CLUSTERS_0_NAME: local-kafka
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
 
-  
   postgres:
     image: postgres:15
     environment:
@@ -156,8 +164,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
-
 
   redis:
     image: redis:7-alpine
@@ -191,10 +197,13 @@ services:
         condition: service_healthy
       mongodb:
         condition: service_healthy
+      loki:
+        condition: service_started
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017
       - ZIPKIN_ENDPOINT=http://zipkin:9411/api/v2/spans
+      - Loki__Url=http://loki:3100
     
   prometheus:
     image: prom/prometheus:latest
@@ -208,6 +217,15 @@ services:
       - '--storage.tsdb.path=/prometheus'
     restart: unless-stopped
 
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - loki_data:/loki
+    restart: unless-stopped
+
   grafana:
     image: grafana/grafana:latest
     ports:
@@ -217,8 +235,10 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
     depends_on:
       - prometheus
+      - loki
     restart: unless-stopped
 
 volumes:
@@ -228,3 +248,4 @@ volumes:
   rabbitmq_data:
   prometheus_data:
   grafana_data:
+  loki_data:
