TASK-393: развернуты все основные .net сервисы, добавлены Health Checks, протестировано самовосстановление, gateway находит book-service

--- a/appsettings.k8s.json
+++ b/appsettings.k8s.json
@@ -19,7 +19,17 @@
     "AuthorService": "http://localhost:7002"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres-service;Port=5432;Database=bookdb;Username=postgres;Password=postgrespw"
+    "DefaultConnection": "Host=postgres-service;Port=5432;Database=bookdb;Username=postgres;Password=postgrespw",
+    "Redis": "redis:6379",
+    "MongoDB": "mongodb://mongodb:27017"
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
+  },
+  "Kafka": {
+    "BootstrapServers": "kafka:9092"
   },
   "JwtSettings": {
     "SecretKey": "your-super-secret-key-with-minimum-32-characters-length",
