--- a/book-service-service.yml
+++ b/book-service-service.yml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: book-service
+  labels:
+    app: book-service 
 spec:
   type: NodePort
   selector:
     app: book-service
   ports:
-    - port: 8080
+    - name: http-metrics
+      port: 8080
       targetPort: 8080
       nodePort: 30080
