TASK-395: CI test

--- a/prometheus-values.yaml
+++ b/prometheus-values.yaml
@@ -7,3 +7,11 @@ prometheus:
       limits:
         cpu: 1
         memory: 3Gi
+grafana:
+  resources:
+    requests:
+      cpu: 200m
+      memory: 256Mi
+    limits:
+      cpu: 500m
+      memory: 512Mi
