--- a/IntegrationsTest/IntegrationsTest.csproj
+++ b/IntegrationsTest/IntegrationsTest.csproj
@@ -12,7 +12,9 @@
   <ItemGroup>
      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.20" />
      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.20" />
+     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="10.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Polly" Version="8.6.4" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="4.8.1" />
     <PackageReference Include="xunit" Version="2.5.3" />
